--- a/style.css
+++ b/style.css
@@ -15,9 +15,7 @@ body {
     background: linear-gradient(135deg, #000, #222831);
 }
 
-.nav {
-    box-shadow: 0px 0px 20px rgb(190, 8, 8);
-}
+
 
 .nav {
     width: 100%;
@@ -27,6 +25,7 @@ body {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
+    box-shadow: 0px 0px 20px rgb(190, 8, 8);
 }
 
 .nav .Logo {
@@ -37,18 +36,70 @@ body {
 
 
 .nav h1 {
-    padding: 5px;
+    padding: 6px;
     font-family: Sansation;
     font-size: 12px;
     color: white;
     text-transform: uppercase;
+    transition: all 0.3s ease-in-out;
 }
 
 .nav h1:hover {
     border: none;
     border-radius: 25px;
-    background-color: white;
-    color: #000;
+    background-color: black;
+    cursor: pointer;
+    box-shadow: 0px 1px 10px rgb(221, 25, 25);
+}
+
+.content {
+    padding: 50px;
+}
+
+.boxes {
+    height: 350px;
+    border: 1px solid white;
+    padding: 20px;
+    display: flex;
+    justify-content: space-around;
+}
+
+.box-1 {
+    width: 250px;
+    height: 300px;
+    border: 1px solid whitesmoke;
+    display: flex;
+    align-items: end;
+    justify-content: space-evenly;
+    padding-bottom: 5px;
+    /* background-color: rgb(4, 0, 255); */
+}
+
+.box-2 {
+    width: 250px;
+    height: 300px;
+    border: 1px solid whitesmoke;
+}
+
+.box-3 {
+    width: 250px;
+    height: 300px;
+    border: 1px solid whitesmoke;
+}
+
+.txt-1 {
+    color: white;
+    font-family: SF Pro Display;
+    font-weight: 200;
+    font-size: 11px;
+    text-transform: uppercase;
+    transition: all 0.3s ease-in-out;
+}
+
+.txt-1:hover {
+    border: none;
+    border-radius: 25px;
+    background-color: black;
     cursor: pointer;
     box-shadow: 0px 1px 10px rgb(221, 25, 25);
 }
