--- a/style.css
+++ b/style.css
@@ -79,15 +79,24 @@ body {
     width: 250px;
     height: 300px;
     border: 1px solid whitesmoke;
+    display: flex;
+    align-items: end;
+    justify-content: space-evenly;
+    padding-bottom: 5px;
 }
 
 .box-3 {
     width: 250px;
     height: 300px;
     border: 1px solid whitesmoke;
+    display: flex;
+    align-items: end;
+    justify-content: space-evenly;
+    padding-bottom: 5px;
 }
 
 .txt-1 {
+    padding: 4px;
     color: white;
     font-family: SF Pro Display;
     font-weight: 200;
@@ -97,6 +106,42 @@ body {
 }
 
 .txt-1:hover {
+    border: none;
+    border-radius: 25px;
+    background-color: black;
+    cursor: pointer;
+    box-shadow: 0px 1px 10px rgb(221, 25, 25);
+}
+
+.txt-2 {
+    padding: 6px;
+    color: white;
+    font-family: SF Pro Display;
+    font-weight: 200;
+    font-size: 11px;
+    text-transform: uppercase;
+    transition: all 0.3s ease-in-out;
+}
+
+.txt-2:hover {
+    border: none;
+    border-radius: 25px;
+    background-color: black;
+    cursor: pointer;
+    box-shadow: 0px 1px 10px rgb(221, 25, 25);
+}
+
+.txt-3 {
+    padding: 6px;
+    color: white;
+    font-family: SF Pro Display;
+    font-weight: 200;
+    font-size: 11px;
+    text-transform: uppercase;
+    transition: all 0.3s ease-in-out;
+}
+
+.txt-3:hover {
     border: none;
     border-radius: 25px;
     background-color: black;
