--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     width: 100%;
 }
 
-.main {
+.page-1 {
     height: 100%;
     background: linear-gradient(135deg, #000, #222831);
 }
@@ -58,10 +58,11 @@ body {
 
 .boxes {
     height: 350px;
-    border: 1px solid white;
+    /* border: 1px solid white; */
     padding: 20px;
     display: flex;
     justify-content: space-around;
+    /* flex-wrap: wrap; */
 }
 
 .box-1 {
@@ -147,4 +148,24 @@ body {
     background-color: black;
     cursor: pointer;
     box-shadow: 0px 1px 10px rgb(221, 25, 25);
+}
+
+.footer {
+    width: 100%;
+    height: 33px;
+    background: linear-gradient(135deg, #222831, #000);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer h1 {
+    font-family: sansation;
+    font-size: 20px;
+    font-weight: 500;
+    color: white;
+}
+
+.footer {
+    box-shadow: 0px 1px 200px rgb(255, 4, 4);
 }
