--- a/style.css
+++ b/style.css
@@ -68,13 +68,26 @@ body {
 .box-1 {
     width: 250px;
     height: 300px;
-    border: 1px solid whitesmoke;
+    /* border: 1px solid whitesmoke; */
+}
+
+.box1_1 img {
+    width: 250px;
+    height: 300px;
+    border-radius: 20px;
+}
+
+.box1_2 {
+    padding: 5px;
+    border: none;
+    background-color: black;
+    border-radius: 20px;
     display: flex;
     align-items: end;
     justify-content: space-evenly;
     padding-bottom: 5px;
-    /* background-color: rgb(4, 0, 255); */
 }
+
 
 .box-2 {
     width: 250px;
@@ -153,7 +166,7 @@ body {
 .footer {
     width: 100%;
     height: 33px;
-    background: linear-gradient(135deg, #222831, #000);
+    background: linear-gradient(135deg, #000, #222831);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -161,7 +174,7 @@ body {
 
 .footer h1 {
     font-family: sansation;
-    font-size: 20px;
+    font-size: 15px;
     font-weight: 500;
     color: white;
 }
