--- a/style.css
+++ b/style.css
@@ -89,16 +89,7 @@ body {
 }
 
 
-.box-2 {
-    width: 250px;
-    height: 300px;
-    border: 1px solid whitesmoke;
-    display: flex;
-    align-items: end;
-    justify-content: space-evenly;
-    padding-bottom: 5px;
-}
-
+.box-2,
 .box-3 {
     width: 250px;
     height: 300px;
@@ -109,52 +100,20 @@ body {
     padding-bottom: 5px;
 }
 
-.txt-1 {
+.txt-1,
+.txt-2,
+.txt-3 {
     padding: 4px;
     color: white;
     font-family: SF Pro Display;
     font-weight: 200;
     font-size: 11px;
     text-transform: uppercase;
-    transition: all 0.3s ease-in-out;
+    transition: all 0.6s ease-in-out;
 }
 
-.txt-1:hover {
-    border: none;
-    border-radius: 25px;
-    background-color: black;
-    cursor: pointer;
-    box-shadow: 0px 1px 10px rgb(221, 25, 25);
-}
-
-.txt-2 {
-    padding: 6px;
-    color: white;
-    font-family: SF Pro Display;
-    font-weight: 200;
-    font-size: 11px;
-    text-transform: uppercase;
-    transition: all 0.3s ease-in-out;
-}
-
-.txt-2:hover {
-    border: none;
-    border-radius: 25px;
-    background-color: black;
-    cursor: pointer;
-    box-shadow: 0px 1px 10px rgb(221, 25, 25);
-}
-
-.txt-3 {
-    padding: 6px;
-    color: white;
-    font-family: SF Pro Display;
-    font-weight: 200;
-    font-size: 11px;
-    text-transform: uppercase;
-    transition: all 0.3s ease-in-out;
-}
-
+.txt-1:hover,
+.txt-2:hover,
 .txt-3:hover {
     border: none;
     border-radius: 25px;
@@ -170,6 +129,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 1px 200px rgb(255, 4, 4);
 }
 
 .footer h1 {
@@ -177,8 +137,4 @@ body {
     font-size: 15px;
     font-weight: 500;
     color: white;
-}
-
-.footer {
-    box-shadow: 0px 1px 200px rgb(255, 4, 4);
 }
